BUGFIX: gap between contents in Header now exists for iphone

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -20,6 +20,12 @@
 
   @media only screen and (max-width: 48em) {
     flex-direction: column-reverse;
+
+    // BUGFIX: quick fix for adding the gap for iphone
+    gap: 0;
+    .textBox {
+      margin-top: 4rem;
+    }
   }
 }
 
